--- a/app/src/main/res/layout/single_song_row.xml
+++ b/app/src/main/res/layout/single_song_row.xml
@@ -133,6 +133,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
+            android:onClick="togglePause"
             android:text="pause" />
 
         <Button
